--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,15 @@
 /* import google fonts  */
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap');
 
+/* 
+    Default style colors 
+    Greenish Blue   : #34c6d3   (buttons, icons, links, lines, background)
+    Steel Gray      : #41464b   (headings)
+    Blue Bayoux     : #64707b   (paragraphs)
+    White           : #ffffff   (text with black background)
+    Black           : #000000
+*/
+
 body {
     font-family: 'Roboto Condensed', sans-serif;
 }
