--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,37 @@
     White           : #ffffff   (text with black background)
     Black           : #000000
 */
+html, body {
+    height: 100%;
+}
 
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto Condensed', sans-serif;
 }
+
+/* 
+   =========================================
+                    HOME
+   =========================================  
+*/
+#home {
+    height: 100%;
+}
+
+#home-cover {
+    height: 100%;
+    background-image: url("../img/bg-home.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+#home-content-box {
+    width: 100%;
+}
+/* 
+   =========================================
+                    HOME END
+   =========================================  
+*/
