--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 /* import google fonts  */
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 
 /* 
     Default style colors 
@@ -19,6 +20,10 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+h3 {
+    text-transform: uppercase;
+}
+
 /* 
    =========================================
                     HOME
@@ -35,11 +40,64 @@ body {
     background-size: cover;
     background-position: center;
 }
+
 #home-content-box {
     width: 100%;
+    height: 100%;
+    display: table; /* div acts as table */
+}
+
+#home-content-box-inner {
+    display: table-cell; /* div acts a table data of its parent div  */
+    vertical-align: middle; /* set vertical alignment for element to be vertically aligned in the middle */
+    text-align: center; /* align child element divs to the center */
+}
+
+#home-heading h3 {
+    font-family: 'Lobster', cursive;
+    color: #fff;
+    font-size: 70px;
+    font-weight: 400;
+    margin: 20px 0 20px 0;
+}
+
+#home-heading h4 {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 300;
+    margin: 5px 0 20px 0;
 }
 /* 
    =========================================
                     HOME END
+   =========================================  
+*/
+
+/* 
+   =========================================
+                    BUTTONS (Generic)
+   =========================================  
+*/
+.btn-general { 
+    border-width: 2px;
+    border-radius: 0;
+    padding: 12px 26px 12px 26px;
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.btn-white {
+    border-color: #fff;
+    color: #fff;
+}
+
+.btn-white:hover, .btn-white:focus {
+    background-color: #fff;
+    color: #41464b;
+}
+/* 
+   =========================================
+                    BUTTONS END
    =========================================  
 */
