--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,14 @@ body {
 }
 
 h3 {
+    color: #64707b;
     text-transform: uppercase;
+}
+
+p {
+    color: #64707b;
+    font-size: 16px;
+    font-weight: 300;
 }
 
 /* 
@@ -151,5 +158,78 @@ h3 {
 /* 
    =========================================
                 ANIMATIONS END
+   =========================================  
+*/
+
+
+/* 
+   =========================================
+                CONTENT (Generic)
+   =========================================  
+*/
+.content-box {
+    padding: 60px 0 60px 0;
+}
+
+.content-title h3 {
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    margin: 0 0 30px 0;
+}
+
+.content-title-underline {
+    width: 100px;
+    height: 3px;
+    background-color: #34c6d3;
+    margin: 5px auto 20px auto; /* technique to center align of a block element horizontally */
+}
+/* 
+   =========================================
+                CONTENT END
+   =========================================  
+*/
+
+
+/* 
+   =========================================
+            SERVICES & SOLUTIONS
+   =========================================  
+*/
+.service-item {
+    padding: 20px 0 20px 0;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.service-item-icon i {
+    color: #34c6d3;
+    float: left; /* specify whether or not an element should be floated to left if there is a space */
+    padding: 15px;
+    margin-right: 5px;
+    width: 25%;
+    height: 25%;
+    text-align: center;
+}
+
+.service-item:hover .service-item-icon i {
+    color: #ffffff;
+    background-color: #34c6d3;
+}
+
+.service-item-title h3 {
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 0 10px 0;
+}
+
+.service-item-desc p {
+    margin: 0;
+    padding-left: 95px;
+    text-align: justify;
+}
+/* 
+   =========================================
+           SERVICES & SOLUTIONS END
    =========================================  
 */
