--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,6 +129,22 @@ p {
     transition: transform 0.7s;
     outline: none;
 }
+
+.btn-blue {
+    border-color: #34c6d3;
+    color: #34c6d3;
+}
+
+.btn-blue:hover, .btn-blue:focus {
+    background-color: #34c6d3;
+    color: #ffffff;
+}
+
+.btn-blue:active {
+    transform: translateY(6px);
+    transition: transform 0.7s;
+    outline: none;
+}
 /* 
    =========================================
                 BUTTONS END
@@ -182,7 +198,7 @@ p {
     width: 100px;
     height: 3px;
     background-color: #34c6d3;
-    margin: 5px auto 20px auto; /* technique to center align of a block element horizontally */
+    margin: 5px auto 30px auto; /* technique to center align of a block element horizontally */
 }
 /* 
    =========================================
@@ -231,5 +247,62 @@ p {
 /* 
    =========================================
            SERVICES & SOLUTIONS END
+   =========================================  
+*/
+
+
+/* 
+   =========================================
+                  ABOUT US
+   =========================================  
+*/
+#about-content-box {
+    float: left; /* specify an element to be placed along the left side of its container */
+    height: 700px;
+}
+
+#about-content-box-outer {
+    width: 100%;
+    height: 100%;
+    display: table; /* div acts as a table */
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center; */
+}
+
+#about-content-box-inner {
+    display: table-cell; /* div acts as a table data */
+    vertical-align: middle; /* set the vertical alignment for a div to the middle */
+    /* justify-content: center;
+    align-items: center;
+    align-content: center; */
+}
+
+#about .content-title h3 {
+    text-align: left;
+}
+
+#about .content-title .content-title-underline {
+    margin: 0 0 30px 0;  
+}
+
+#about-desc p {
+    margin-bottom: 30px;
+    text-align: justify;
+}
+
+#about-btn {
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    align-items: center;
+}
+/* 
+   =========================================
+                ABOUT US END
    =========================================  
 */
