updated with container-fluid and added styles adjusting images.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,7 +256,6 @@ p {
                   ABOUT US
    =========================================  
 */
-
 /* Right Side */
 #about-bg-diagonal {
     width: 60%;
@@ -316,5 +315,21 @@ p {
 /* 
    =========================================
                 ABOUT US END
+   =========================================  
+*/
+
+
+/* 
+   =========================================
+                PORTFOLIO/WORK 
+   =========================================  
+*/
+.row.no-blank-space [class*=col-] {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+/* 
+   =========================================
+            PORTFOLIO/WORK END 
    =========================================  
 */
