--- a/public/css/style.css
+++ b/public/css/style.css
@@ -343,6 +343,7 @@ p {
 .img-wrapper img:hover {
     transform: scale(1.5); /* change the size of image element */
     transition: transform 0.5s ease;
+    cursor: zoom-in;
 }
 /* 
    =========================================
