--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 /* import google fonts  */
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap&subset=latin-ext');
 
 /* 
     Default style colors 
@@ -348,5 +349,40 @@ p {
 /* 
    =========================================
             PORTFOLIO/WORK END 
+   =========================================  
+*/
+
+/* 
+   =========================================
+                    TEAM 
+   =========================================  
+*/
+.team-member-single {
+    margin: 0 15px;
+}
+
+.team-member-info {
+    padding: 10px 0 30px 0s;
+}
+
+.team-member-name {
+    font-family: 'Righteous', cursive;
+    font-size: 22px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    padding-top: 2px;    
+}
+
+.team-member-designation {
+    color: #34c6d3;
+    font-size: 15px;
+    font-weight: 700;
+    font-style: italic;
+    letter-spacing: 1px;
+    margin-top: 5px;
+}
+/* 
+   =========================================
+                  TEAM END 
    =========================================  
 */
