added generic styles for social icons of team section.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,6 +352,7 @@ p {
    =========================================  
 */
 
+
 /* 
    =========================================
                     TEAM 
@@ -384,5 +385,29 @@ p {
 /* 
    =========================================
                   TEAM END 
+   =========================================  
+*/
+
+
+/* 
+   =========================================
+            SOCIAL ICONS (Generic) 
+   =========================================  
+*/
+.social-list {
+    padding-left: 0;
+}
+
+.social-list li {
+    list-style: none;
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    margin-right: 6px;
+    margin-top: 10px;
+}
+/* 
+   =========================================
+              SOCIAL ICONS END 
    =========================================  
 */
