--- a/public/css/style.css
+++ b/public/css/style.css
@@ -429,3 +429,23 @@ p {
               SOCIAL ICONS END 
    =========================================  
 */
+
+
+/* 
+   =========================================
+                TESTIMONIALS
+   =========================================  
+*/
+#testimonials-cover {
+    background-image: url("../img/bg-testimonials.jpg");
+}
+
+/* create an overlay effect & dim background color */
+#testimonials .content-box {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+/* 
+   =========================================
+              TESTIMONIALS END
+   =========================================  
+*/
