--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,6 +195,10 @@ p {
     margin: 0 0 30px 0;
 }
 
+.content-title-white h3 {
+    color: #ffff;
+}
+
 .content-title-underline {
     width: 100px;
     height: 3px;
