--- a/public/css/style.css
+++ b/public/css/style.css
@@ -458,6 +458,18 @@ p {
     max-width: 120px;
     margin: 0 auto 0 auto; /* set image element to be center aligned */
 }
+
+.testimonial blockquote {
+    border: 0;
+    font-family: Georgia, serif;
+    font-style: italic;
+    color: #ffffff;
+    padding: 6px 150px;
+}
+
+.testimonial blockquote p {
+    color: #ffffff;
+}
 /*
    =========================================
               TESTIMONIALS END
