--- a/public/css/style.css
+++ b/public/css/style.css
@@ -528,6 +528,10 @@ h4.pricing-title {
     color: #ffffff;
     display: inline-block;
     padding: 7px 15px;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 0 0 30px 0;
 }
 /* 
    =========================================
