--- a/public/css/style.css
+++ b/public/css/style.css
@@ -576,3 +576,46 @@ ul.pricing-spec li p {
                 PRICING END
    =========================================  
 */
+
+
+/* 
+   =========================================
+                  STATISTICS
+   =========================================  
+*/
+#stats-cover {
+    background-image: url("../img/bg-stats.jpg");
+}
+
+/* create an overlay effect & dim background color */
+#stats-cover .content-box {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.stats-item {
+    padding: 100px 0;
+}
+
+.stats-item i {
+    color: #34c6d3;
+}
+
+.stats-item h2 {
+    color: #ffffff;
+    font-size: 35px;
+    font-weight: 700;
+    margin-top: 15px;
+    margin-bottom: 1px;
+}
+
+.stats-item p {
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 300;
+    margin-top: 0;
+}
+/* 
+   =========================================
+                STATISTICS END
+   =========================================  
+*/
