--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+/* 
+    Author: Muhammad Hafidz Misrudin
+    Description: Proprietary (no permission for copy or use or redistribution)
+    Date written: 110/11/2019
+    Date last updated: 16/05/2020
+*/
+
 /* import google fonts  */
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
