updated animation and css styles.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -626,3 +626,18 @@ ul.pricing-spec li p {
                 STATISTICS END
    =========================================  
 */
+
+
+/* 
+   =========================================
+                  CLIENTS
+   =========================================  
+*/
+.client {
+    padding: 40px 0;
+}
+/* 
+   =========================================
+                CLIENTS END
+   =========================================  
+*/
