--- a/public/css/style.css
+++ b/public/css/style.css
@@ -658,7 +658,8 @@ footer {
     border-top: 5px solid rgba(0, 0, 0, 0.1);
 }
 
-#contact-left h3 {
+#contact-left h3,
+#contact-right h3 {
     color: #ffffff;
     font-size: 27px;
     font-weight: 700;
@@ -682,6 +683,21 @@ address {
 address strong, 
 #phone-fax-email strong {
     letter-spacing: 1px;
+}
+
+form .form-control {
+    background: transparent;
+    border-radius: 0;
+    border-color: #ffffff;
+    font-size: 17px;
+    font-weight: 300;
+    padding: 8px 16px;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+
+#send-btn {
+    margin-bottom: 10px;
 }
 /* 
    =========================================
